Migrate all SSZ collections from old SSZ* classes  (#3623)
* Add the following primitive collection hierarchy (immutable/mutable/schema interfaces, implementations):
SszPrimitiveCollection, SszPrimitiveList, SszPrimitiveVector, SszBytes32Vector, SszUInt64List, SszByteVector, SszPublicKey, SszSignature
* Replace all old SSZVector/SSZList<SszContainer> with the corresponding new types
* Replace SSZVector<Bytes32> with SszBytes32Vector
* Replace SSZList<UInt64> with SszUInt64List
* Replace all other SSZList/Vector<Primitive> with SszPrimitiveList/Vector (with 2 type parameters unfortunately)
* Replace BLSPublicKey & BLSSignature (represented by SSZVector<Byte>) with corresponding SszPublicKey & SszSignature
* Remove all custom caches for SSZList/Vector in ssz containers
* Remove SSZTypes.* classes except of Bytes4
* Add unit tests hierarchy